Move Cryptography to Security.

--- a/CSharp/DamienG.Tests/DamienG.Tests.csproj
+++ b/CSharp/DamienG.Tests/DamienG.Tests.csproj
@@ -54,9 +54,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AssemblyInfo.cs" />
-    <Compile Include="Cryptography\BaseCryptographyTests.cs" />
-    <Compile Include="Cryptography\Crc32Tests.cs" />
-    <Compile Include="Cryptography\Elf32Tests.cs" />
+    <Compile Include="Security\Cryptography\BaseCryptographyTests.cs" />
+    <Compile Include="Security\Cryptography\Crc32Tests.cs" />
+    <Compile Include="Security\Cryptography\Elf32Tests.cs" />
     <Compile Include="IO\ActionTextWriterTests.cs" />
     <Compile Include="System\LinqExtensionsTests.cs" />
     <Compile Include="System\EnumTTests.cs" />
@@ -90,7 +90,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Cryptography\TestFiles\binary12K.png">
+    <Content Include="Security\Cryptography\TestFiles\binary12K.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
