--- a/CSharp/DamienG.Library/DamienG.Library.csproj
+++ b/CSharp/DamienG.Library/DamienG.Library.csproj
@@ -61,8 +61,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AssemblyInfo.cs" />
-    <Compile Include="Cryptography\Crc32.cs" />
-    <Compile Include="Cryptography\Elf32.cs" />
+    <Compile Include="Security\Cryptography\Crc32.cs" />
+    <Compile Include="Security\Cryptography\Elf32.cs" />
     <Compile Include="System\AutoOperators.cs" />
     <Compile Include="System\DateExtensions.cs" />
     <Compile Include="System\LinqExtensions.cs" />
