--- a/CSharp/DamienG.Library/DamienG.Library.csproj
+++ b/CSharp/DamienG.Library/DamienG.Library.csproj
@@ -97,6 +97,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AssemblyInfo.cs" />
+    <Compile Include="Security\Cryptography\Crc32Slice16.cs" />
     <Compile Include="Security\Cryptography\Crc32Slice8.cs" />
     <Compile Include="Security\Cryptography\Crc32.cs" />
     <Compile Include="Security\Cryptography\Crc64.cs" />
