--- a/CSharp/DamienG.Tests/DamienG.Tests.csproj
+++ b/CSharp/DamienG.Tests/DamienG.Tests.csproj
@@ -77,6 +77,7 @@
   <ItemGroup>
     <Compile Include="AssemblyInfo.cs" />
     <Compile Include="Security\Cryptography\BaseHashAlgorithmTests.cs" />
+    <Compile Include="Security\Cryptography\Crc32Slice16Tests.cs" />
     <Compile Include="Security\Cryptography\Crc32Slice8Tests.cs" />
     <Compile Include="Security\Cryptography\Crc64Tests.cs" />
     <Compile Include="Security\Cryptography\Crc32Tests.cs" />
