Improve JSON estimator

--- a/CSharp/DamienG.Library/DamienG.Library.csproj
+++ b/CSharp/DamienG.Library/DamienG.Library.csproj
@@ -69,4 +69,7 @@
   <ItemGroup>
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\.editorconfig" Link=".editorconfig" />
+  </ItemGroup>
 </Project>
